--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 # DB separado
+DB_SCHEME=postgresql+asyncpg
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_HOST=localhost
@@ -6,7 +7,7 @@ DB_PORT=5432
 DB_NAME=video_summarizer
 
 # auth
-SECRET_KEY=supersecret
+SECRET_KEY=9lFMjHPG9rh7sNm5KCx5vQUmdqXwJcrXmhPWN32B6FU
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=60
 
@@ -21,3 +22,12 @@ SECRET_KEY=minio123
 PROVIDER=openai
 OPENAI_API_KEY=sk-...
 TRANSFORMERS_MODEL=facebook/bart-large-cnn
+
+# Redis
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_DB=0
+REDIS_URL=redis://localhost:6379/0
+
+# Celery (usa Redis como broker)
+CELERY_BROKER_URL=redis://localhost:6379/0
