--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,9 @@ aioboto3>=14.3.0
 botocore>=1.37.3
 python-dotenv>=1.1.0
 aiohttp>=3.11.18
-openai>=1.82.0
 transformers>=4.52.3
-httpx>=1.0.0b0
-alembic>=1.16.1
 uvicorn>=0.34.2
+jose~=1.0.0
+python-jose~=3.4.0
+pydantic-settings~=2.9.1
+openai-whisper~=20240930
