--- a/requirements.txt
+++ b/requirements.txt
@@ -5,13 +5,16 @@ pytest>=8.3.5
 passlib>=1.7.4
 redis>=6.1.0
 celery>=5.5.2
-aioboto3>=14.3.0
 botocore>=1.37.3
 python-dotenv>=1.1.0
-aiohttp>=3.11.18
 transformers>=4.52.3
-uvicorn>=0.34.2
 jose~=1.0.0
 python-jose~=3.4.0
 pydantic-settings~=2.9.1
 openai-whisper~=20240930
+boto3~=1.37.3
+numpy~=2.2.6
+alembic~=1.16.1
+av~=14.4.0
+faster-whisper~=1.1.1
+resampy~=0.4.3
