--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ transformers>=4.52.3
 jose~=1.0.0
 python-jose~=3.4.0
 pydantic-settings~=2.9.1
-openai-whisper~=20240930
+openai-whisper
 boto3~=1.37.3
 numpy~=2.2.6
 alembic~=1.16.1
