feat(observability): Integrate OpenTelemetry for distributed tracing
This commit introduces distributed tracing across the application using OpenTelemetry, providing end-to-end visibility into requests and asynchronous workflows.

- **Dependencies:** Added OpenTelemetry API, SDK, Jaeger exporter, and instrumentors for FastAPI, Celery, and SQLAlchemy.

- **Configuration:** A new 'tracing.py' module configures a global tracer provider to export spans to a Jaeger agent.

- **Instrumentation:**
  - **FastAPI:** The application is now instrumented to automatically trace all incoming HTTP requests.
  - **Celery:** The Celery instance is instrumented to propagate trace context from HTTP requests to background tasks.
  - **SQLAlchemy:** The async database engine is instrumented to trace all database queries as individual spans.

This completes the three pillars of observability (Logs, Metrics, Tracing), enabling deep performance analysis and easier debugging of the distributed system.

--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,15 @@ uvicorn>=0.34.2
 # intel-extension-for-pytorch==2.7.10+xpu
 torch>=2.8.0
 numba>=0.61.2
-# Observabilidade
+
+# Observability
 structlog>=24.4.0
 prometheus-client>=0.21.0
+
+# OpenTelemetry for Distributed Tracing
+opentelemetry-api>=1.25.0
+opentelemetry-sdk>=1.25.0
+opentelemetry-exporter-jaeger>=1.25.0
+opentelemetry-instrumentation-fastapi>=0.46.0
+opentelemetry-instrumentation-celery>=0.46.0
+opentelemetry-instrumentation-sqlalchemy>=0.46.0
