feat(resilience): Implement Circuit Breaker pattern
This commit introduces the Circuit Breaker pattern to improve the application's resilience against failures in external services.

- **Dependency:** Added the 'pybreaker' library.
- **Resilience Module:** Created a new module at 'src/shared/resilience/circuit_breaker.py' which provides a factory to create and manage circuit breaker instances for different external services.
- **Protected Handlers:**
  - The 'ProcessTranscriptionCommandHandler' now wraps calls to the speech recognition service with a circuit breaker.
  - The 'ProcessSummaryCommandHandler' applies the same protection to calls made to the summarization service.

This prevents cascading failures by allowing the system to 'fail fast' if an external service is consistently unavailable, improving overall stability.

--- a/requirements.txt
+++ b/requirements.txt
@@ -32,3 +32,6 @@ opentelemetry-exporter-jaeger>=1.25.0
 opentelemetry-instrumentation-fastapi>=0.46.0
 opentelemetry-instrumentation-celery>=0.46.0
 opentelemetry-instrumentation-sqlalchemy>=0.46.0
+
+# Resilience
+pybreaker>=1.1.0
